--- a/src/2-form.html
+++ b/src/2-form.html
@@ -14,7 +14,17 @@
           Form
         </h1>
         <a class="back-link" href="./index.html">Go back</a>
-
+          <form class="feedback-form" autocomplete="off">
+            <label class="label">
+              Email
+              <input type="email" name="email" class="input" autofocus />
+            </label>
+            <label class="label">
+              Message
+              <textarea name="message" rows="8" class="input" class="textarea"></textarea>
+            </label>
+            <button type="submit" class="button">Submit</button>
+          </form>
       </div>
     </main>
 
